--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BOT_TOKEN=your_bot_token_here
-GROUP_ID=-1001234567890
+BOT_TOKEN=your_telegram_bot_token
+GROUP_ID=-100xxxxxxxxxx   # যেখানে OTP যাবে
