--- a/package.json
+++ b/package.json
@@ -1,1 +1,22 @@
-
+{
+  "name": "otp-revice-bot",
+  "version": "1.0.0",
+  "description": "A Telegram bot that fetches OTPs from IVASMS and sends them to a Telegram group",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "keywords": [
+    "telegram-bot",
+    "otp",
+    "ivasms",
+    "otp-receiver"
+  ],
+  "author": "your_name_here",
+  "license": "MIT",
+  "dependencies": {
+    "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
+    "node-telegram-bot-api": "^0.61.0"
+  }
+}
