--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BOT_TOKEN=your_telegram_bot_token
-GROUP_ID=-100xxxxxxxxxx   # যেখানে OTP যাবে
+BOT_TOKEN=8014693781:AAH4L3ArLgpwRN0XsyJ6qhdQ6-mqFrqMb8U
+GROUP_ID=-1002885159248   # যেখানে OTP যাবে
