--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",                  ✅ // ⬅️ এই লাইনটাই নতুন লাগবে
+    "express": "^4.19.2",
     "node-telegram-bot-api": "^0.61.0"
   }
 }
