--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BOT_TOKEN=7684348684:AAHI9__PKwK-RdhrrniZRY1L38Eiqi0qWm8
-GROUP_ID=-1002734406395   # যেখানে OTP যাবে
+BOT_TOKEN=7684348684:AAEc7J2115Zz29w11p6LgFcl2G-39mwwVkY
+GROUP_ID=-1002734406395
